(executables (names main)
 (modes js)
 (libraries bonsai_experimental_table_form bonsai_web bonsai_web_ui_form
  bonsai_web_ui_extendy bonsai_extra username_kernel
  bonsai_web_ui_partial_render_table)
 (preprocess (pps ppx_typed_fields ppx_jane ppx_bonsai ppx_css)))

(alias
 (name all)
 (deps (glob_files *.html) (glob_files *.css)))
