(executables (names main)
 (libraries bonsai_web bonsai_web_ui_auto_generated zarith_stubs_js)
 (modes js wasm)
 (preprocess (pps ppx_bonsai ppx_jane)))

(rule (targets embedded_files.ml embedded_files.mli)
 (deps %{bin:ocaml-embed-file} type_intf.ml)
 (action (bash "%{deps} -output embedded_files")))

(alias
 (name all)
 (deps (glob_files *.html)))
