(executables (names main) (libraries bonsai_web ppx_css.inline_css)
 (modes js)
 (preprocess (pps ppx_bonsai ppx_jane js_of_ocaml-ppx)))

(rule
 (targets todomvc.ml todomvc.mli todomvc__generated.ml
  todomvc__generated.mli)
 (deps todomvc.css)
 (action (bash "%{bin:css_inliner} %{deps} \"((rewrite ()))\"")))

(alias
 (name all)
 (deps (glob_files *.html)))
