(executables (names main) (libraries bonsai_web bonsai_web_ui_typeahead)
 (modes js)
 (preprocess (pps js_of_ocaml-ppx ppx_bonsai ppx_jane)))

(rule (targets style.css)
 (deps %{workspace_root}/lib/jane_web_style/src/css/style-6.css
  app_style.css)
 (action (bash "cat %{deps} > %{targets}")))

(alias (name all) (deps style.css))

(alias
 (name all)
 (deps (glob_files *.html)))
